# PythonProject-microshop

./: db.sqlite3  main.py  pyproject.toml
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
